<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pm_robot_dashboard</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pmlab@pmlab.pmlab">pmlab</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS core dependencies -->
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  
  <!-- Standard ROS message packages -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>builtin_interfaces</depend>
  <depend>pm_skills</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  
  <!-- Custom ROS packages -->
  <depend>pm_msgs</depend>
  <depend>pm_robot_modules</depend>
  <depend>pm_moveit_interfaces</depend>
  <depend>assembly_scene_viewer</depend>
  <depend>pm_tf_viewer</depend>
  <depend>ros_sequential_action_programmer</depend>
  <depend>assembly_scene_publisher</depend>
  <depend>assembly_manager_interfaces</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
